--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script src="features/session-recorder.js"></script>
   <style>
     body { width: 300px; padding: 10px; }
     button { width: 100%; margin: 5px 0; padding: 8px; }
