--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,23 @@
     .recording { color: red; }
     #recordingStatus { margin: 5px 0; }
     .danger { background: #dc3545; color: white; }
+    #userList { 
+      margin: 10px 0;
+      padding: 10px;
+      background: #f8f9fa;
+      border-radius: 4px;
+    }
+    #userList h4 {
+      margin: 0 0 10px 0;
+      color: #666;
+    }
+    .user-item {
+      padding: 5px;
+      margin: 2px 0;
+      background: #fff;
+      border-radius: 3px;
+      border: 1px solid #ddd;
+    }
   </style>
 </head>
 <body>
@@ -17,6 +34,8 @@
   <button id="joinRoom">Join Room</button>
   <button id="leaveSession" class="danger" disabled>Leave Session</button>
   <div id="status"></div>
+
+  <div id="userList"></div>
 
   <div class="controls">
     <button id="startRecording">Start Recording</button>
