--- a/popup.html
+++ b/popup.html
@@ -8,47 +8,103 @@
 <body>
   <div id="app">
     <div class="header">
-      <h1>YoBuddy</h1>
+      <div class="logo">
+        <img src="images/icon48.png" alt="YoBuddy" class="logo-img">
+        <h1>YoBuddy</h1>
+      </div>
     </div>
     
     <div class="main-content">
-      <div class="section">
-        <button id="generateSession" class="primary-button">Generate Session ID</button>
+      <div class="section generate-section">
+        <button id="generateSession" class="primary-button">
+          <svg class="icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <circle cx="12" cy="12" r="10"></circle>
+            <line x1="12" y1="8" x2="12" y2="16"></line>
+            <line x1="8" y1="12" x2="16" y2="12"></line>
+          </svg>
+          Create New Session
+        </button>
+
         <div id="sessionIdDisplay" class="session-display hidden">
-          <span>Session ID:</span>
-          <input type="text" id="generatedId" readonly>
-          <button id="copyId" class="icon-button" title="Copy to clipboard">📋</button>
+          <div class="id-container">
+            <span class="label">Session ID:</span>
+            <div class="input-group">
+              <input type="text" id="generatedId" readonly>
+              <button id="copyId" class="icon-button" title="Copy to clipboard">
+                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
+                  <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
+                </svg>
+              </button>
+            </div>
+          </div>
+
           <div class="share-options">
-            <button id="shareWhatsapp" class="share-button" title="Share via WhatsApp">
-              <img src="images/whatsapp.png" alt="WhatsApp">
-            </button>
-            <button id="shareEmail" class="share-button" title="Share via Email">
-              <img src="images/email.png" alt="Email">
-            </button>
-            <button id="shareSMS" class="share-button" title="Share via SMS">
-              <img src="images/sms.png" alt="SMS">
-            </button>
+            <span class="label">Share via:</span>
+            <div class="share-buttons">
+              <button id="shareWhatsapp" class="share-button" title="Share via WhatsApp">
+                <img src="images/whatsapp.svg" alt="WhatsApp">
+              </button>
+              <button id="shareEmail" class="share-button" title="Share via Email">
+                <img src="images/email.svg" alt="Email">
+              </button>
+              <button id="shareSMS" class="share-button" title="Share via SMS">
+                <img src="images/sms.svg" alt="SMS">
+              </button>
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="section">
-        <h3>Join Existing Session</h3>
-        <div class="join-section">
+      <div class="section join-section">
+        <h3>
+          <svg class="icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+            <circle cx="8.5" cy="7" r="4"></circle>
+            <line x1="20" y1="8" x2="20" y2="14"></line>
+            <line x1="23" y1="11" x2="17" y2="11"></line>
+          </svg>
+          Join Session
+        </h3>
+        <div class="input-group">
           <input type="text" id="sessionId" placeholder="Enter Session ID">
           <button id="joinSession" class="secondary-button">Join</button>
         </div>
       </div>
 
-      <div id="active-session" class="section hidden">
+      <div id="active-session" class="section active-section hidden">
         <div class="session-info">
-          <p>Active Session: <span id="currentSessionId"></span></p>
+          <span class="label">Current Session:</span>
+          <span id="currentSessionId" class="session-code"></span>
         </div>
-        <div class="controls">
-          <button id="toggleVoice" class="feature-button">🎤 Voice Chat</button>
-          <button id="toggleCart" class="feature-button">🛒 Group Cart</button>
+
+        <div class="features">
+          <button id="toggleVoice" class="feature-button">
+            <svg class="icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <path d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"></path>
+              <path d="M19 10v2a7 7 0 0 1-14 0v-2"></path>
+              <line x1="12" y1="19" x2="12" y2="23"></line>
+              <line x1="8" y1="23" x2="16" y2="23"></line>
+            </svg>
+            Voice Chat
+          </button>
+          <button id="toggleCart" class="feature-button">
+            <svg class="icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <circle cx="9" cy="21" r="1"></circle>
+              <circle cx="20" cy="21" r="1"></circle>
+              <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path>
+            </svg>
+            Group Cart
+          </button>
         </div>
-        <button id="endSession" class="danger-button">End Session</button>
+
+        <button id="endSession" class="danger-button">
+          <svg class="icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M18.36 6.64a9 9 0 1 1-12.73 0"></path>
+            <line x1="12" y1="2" x2="12" y2="12"></line>
+          </svg>
+          End Session
+        </button>
       </div>
     </div>
   </div>
