--- a/popup.html
+++ b/popup.html
@@ -8,103 +8,76 @@
 <body>
   <div id="app">
     <div class="header">
-      <div class="logo">
-        <img src="images/icon48.png" alt="YoBuddy" class="logo-img">
-        <h1>YoBuddy</h1>
-      </div>
+      <h1>YoBuddy</h1>
     </div>
     
     <div class="main-content">
-      <div class="section generate-section">
-        <button id="generateSession" class="primary-button">
-          <svg class="icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-            <circle cx="12" cy="12" r="10"></circle>
-            <line x1="12" y1="8" x2="12" y2="16"></line>
-            <line x1="8" y1="12" x2="16" y2="12"></line>
-          </svg>
-          Create New Session
-        </button>
-
+      <div class="section">
+        <button id="generateSession" class="primary-button">Generate Session ID</button>
         <div id="sessionIdDisplay" class="session-display hidden">
-          <div class="id-container">
-            <span class="label">Session ID:</span>
-            <div class="input-group">
-              <input type="text" id="generatedId" readonly>
-              <button id="copyId" class="icon-button" title="Copy to clipboard">
-                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                  <rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
-                  <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
-                </svg>
-              </button>
-            </div>
+          <span>Session ID:</span>
+          <div class="id-group">
+            <input type="text" id="generatedId" readonly>
+            <button id="copyId" class="icon-button" title="Copy to clipboard">
+              <svg viewBox="0 0 24 24" width="16" height="16" stroke="currentColor" stroke-width="2" fill="none">
+                <rect x="9" y="9" width="13" height="13" rx="2" ry="2"/>
+                <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"/>
+              </svg>
+            </button>
           </div>
-
           <div class="share-options">
-            <span class="label">Share via:</span>
-            <div class="share-buttons">
-              <button id="shareWhatsapp" class="share-button" title="Share via WhatsApp">
-                <img src="images/whatsapp.svg" alt="WhatsApp">
-              </button>
-              <button id="shareEmail" class="share-button" title="Share via Email">
-                <img src="images/email.svg" alt="Email">
-              </button>
-              <button id="shareSMS" class="share-button" title="Share via SMS">
-                <img src="images/sms.svg" alt="SMS">
-              </button>
-            </div>
+            <button id="shareWhatsapp" class="share-button" title="Share via WhatsApp">
+              <svg viewBox="0 0 24 24" width="20" height="20" stroke="#25D366" fill="#25D366">
+                <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/>
+              </svg>
+            </button>
+            <button id="shareEmail" class="share-button" title="Share via Email">
+              <svg viewBox="0 0 24 24" width="20" height="20" stroke="#EA4335" fill="none">
+                <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
+                <polyline points="22,6 12,13 2,6"/>
+              </svg>
+            </button>
+            <button id="shareSMS" class="share-button" title="Share via SMS">
+              <svg viewBox="0 0 24 24" width="20" height="20" stroke="#4285F4" fill="none">
+                <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/>
+              </svg>
+            </button>
           </div>
         </div>
       </div>
 
-      <div class="section join-section">
-        <h3>
-          <svg class="icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-            <path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
-            <circle cx="8.5" cy="7" r="4"></circle>
-            <line x1="20" y1="8" x2="20" y2="14"></line>
-            <line x1="23" y1="11" x2="17" y2="11"></line>
-          </svg>
-          Join Session
-        </h3>
-        <div class="input-group">
+      <div class="section">
+        <h3>Join Session</h3>
+        <div class="join-section">
           <input type="text" id="sessionId" placeholder="Enter Session ID">
           <button id="joinSession" class="secondary-button">Join</button>
         </div>
       </div>
 
-      <div id="active-session" class="section active-section hidden">
+      <div id="active-session" class="section hidden">
         <div class="session-info">
-          <span class="label">Current Session:</span>
-          <span id="currentSessionId" class="session-code"></span>
+          <p>Current Session: <span id="currentSessionId"></span></p>
         </div>
-
-        <div class="features">
+        <div class="controls">
           <button id="toggleVoice" class="feature-button">
-            <svg class="icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <path d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"></path>
-              <path d="M19 10v2a7 7 0 0 1-14 0v-2"></path>
-              <line x1="12" y1="19" x2="12" y2="23"></line>
-              <line x1="8" y1="23" x2="16" y2="23"></line>
+            <svg viewBox="0 0 24 24" width="16" height="16" stroke="currentColor" fill="none">
+              <path d="M12 1a3 3 0 0 0-3 3v8a3 3 0 0 0 6 0V4a3 3 0 0 0-3-3z"/>
+              <path d="M19 10v2a7 7 0 0 1-14 0v-2"/>
+              <line x1="12" y1="19" x2="12" y2="23"/>
+              <line x1="8" y1="23" x2="16" y2="23"/>
             </svg>
             Voice Chat
           </button>
           <button id="toggleCart" class="feature-button">
-            <svg class="icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <circle cx="9" cy="21" r="1"></circle>
-              <circle cx="20" cy="21" r="1"></circle>
-              <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path>
+            <svg viewBox="0 0 24 24" width="16" height="16" stroke="currentColor" fill="none">
+              <circle cx="9" cy="21" r="1"/>
+              <circle cx="20" cy="21" r="1"/>
+              <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"/>
             </svg>
             Group Cart
           </button>
         </div>
-
-        <button id="endSession" class="danger-button">
-          <svg class="icon" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-            <path d="M18.36 6.64a9 9 0 1 1-12.73 0"></path>
-            <line x1="12" y1="2" x2="12" y2="12"></line>
-          </svg>
-          End Session
-        </button>
+        <button id="endSession" class="danger-button">End Session</button>
       </div>
     </div>
   </div>
