--- a/popup.html
+++ b/popup.html
@@ -40,7 +40,10 @@
 
     <div id="status" class="status hidden"></div>
   </div>
-  <script type="module" src="firebase-config.js"></script>
-  <script type="module" src="popup.js"></script>
+  <script src="lib/firebase-app.js"></script>
+  <script src="lib/firebase-auth.js"></script>
+  <script src="lib/firebase-database.js"></script>
+  <script src="firebase-config.js"></script>
+  <script src="popup.js"></script>
 </body>
 </html>
