--- a/popup.html
+++ b/popup.html
@@ -40,6 +40,7 @@
 
     <div id="status" class="status hidden"></div>
   </div>
+  <!-- Load Firebase from local files -->
   <script src="lib/firebase-app.js"></script>
   <script src="lib/firebase-auth.js"></script>
   <script src="lib/firebase-database.js"></script>
