Update Firebase configuration to use CDN instead of modules

--- a/popup.html
+++ b/popup.html
@@ -40,10 +40,13 @@
 
     <div id="status" class="status hidden"></div>
   </div>
-  <!-- Load Firebase from local files -->
-  <script src="lib/firebase-app.js"></script>
-  <script src="lib/firebase-auth.js"></script>
-  <script src="lib/firebase-database.js"></script>
+  
+  <!-- Firebase CDN -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+  
+  <!-- App Scripts -->
   <script src="firebase-config.js"></script>
   <script src="popup.js"></script>
 </body>
