--- a/popup.html
+++ b/popup.html
@@ -41,10 +41,10 @@
     <div id="status" class="status hidden"></div>
   </div>
   
-  <!-- Firebase CDN -->
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
+  <!-- Firebase Local Files -->
+  <script src="lib/firebase-app.js"></script>
+  <script src="lib/firebase-auth.js"></script>
+  <script src="lib/firebase-database.js"></script>
   
   <!-- App Scripts -->
   <script src="firebase-config.js"></script>
