--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,10 @@
 <head>
   <title>YoBuddy</title>
   <link rel="stylesheet" href="popup.css">
+  <!-- Firebase CDN -->
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
 </head>
 <body>
   <div class="container">
@@ -40,12 +44,7 @@
 
     <div id="status" class="status hidden"></div>
   </div>
-  
-  <!-- Firebase from CDNJS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/8.10.1/firebase-app.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/8.10.1/firebase-auth.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/8.10.1/firebase-database.js"></script>
-  
+
   <!-- App Scripts -->
   <script src="firebase-config.js"></script>
   <script src="popup.js"></script>
