--- a/popup.html
+++ b/popup.html
@@ -3,10 +3,6 @@
 <head>
   <title>YoBuddy</title>
   <link rel="stylesheet" href="popup.css">
-  <!-- Firebase CDN -->
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
 </head>
 <body>
   <div class="container">
@@ -45,7 +41,9 @@
     <div id="status" class="status hidden"></div>
   </div>
 
-  <!-- App Scripts -->
+  <script src="/js/firebase-app.js"></script>
+  <script src="/js/firebase-auth.js"></script>
+  <script src="/js/firebase-database.js"></script>
   <script src="firebase-config.js"></script>
   <script src="popup.js"></script>
 </body>
