--- a/popup.html
+++ b/popup.html
@@ -41,9 +41,9 @@
     <div id="status" class="status hidden"></div>
   </div>
 
-  <script src="/js/firebase-app.js"></script>
-  <script src="/js/firebase-auth.js"></script>
-  <script src="/js/firebase-database.js"></script>
+  <script src="js/firebase-app.js"></script>
+  <script src="js/firebase-auth.js"></script>
+  <script src="js/firebase-database.js"></script>
   <script src="firebase-config.js"></script>
   <script src="popup.js"></script>
 </body>
